--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
     "vue-cli-plugin-vuetify": "~2.5.1",
+    "vue-ellipse-progress": "^1.3.1",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
   },
