--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
-    "sass": "^1.54.0",
+    "sass": "~1.32.12",
     "sass-loader": "^13.0.2",
     "vue-cli-plugin-vuetify": "~2.5.1",
-    "vue-ellipse-progress": "^1.3.1",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
   },
@@ -53,3 +52,6 @@
     "not dead"
   ]
 }
+
+
+
