--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "chart.js": "^3.9.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -27,6 +28,7 @@
     "prettier": "^2.4.1",
     "sass": "~1.32.12",
     "sass-loader": "^13.0.2",
+    "vue-chartjs": "^4.1.1",
     "vue-cli-plugin-vuetify": "~2.5.1",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
@@ -52,6 +54,3 @@
     "not dead"
   ]
 }
-
-
-
