--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "vue-chartjs": "^4.1.1",
     "vue-cli-plugin-vuetify": "~2.5.1",
     "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.0"
+    "vuetify-loader": "^1.7.0",
+    "stylelint-fix": "^2.1.5"
   },
   "eslintConfig": {
     "root": true,
